
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 MAR 25a
  * in model/chem/*/*.c and model/share/chem_share.c
    - added *gl and T parameters to add_to_Qei() and add_to_dQei() functions
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in _sigmaes(), added Te=min(50000.0,Te) because the polynomials used to find the cross-section
      of electrons with neutrals within the Kim2012 electron energy transport model can not be
      used reliably above 50000K
  * in model/share/chem_share.c
    - in add_to_dQei(), added missing linearization of some terms 
    - in add_to_Qei() and add_to_dQei(), turned off the Qei terms if Te<QEI_TEMIN
  * in bin
    - added Te_vs_EoverN.wrp


2024 MAR 23a
  * in bin
    - added Broslawski.wrp


2024 MAR 20a
  * in model/chem/_Air_Plasma_8s/
    - added rodriguez2024.c
  * in model/chem/_Air_Plasma_8s/chem.c
    - added chemical solver rodriguez2024
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield(), added _averagedrate for EDOTJ and EDOTJE and took away _averagedrate 
      for EEMAG
  

2024 MAR 15c
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - fixed a few mistakes related to the Rodriguez2024 model
    

2024 MAR 15b
  * in model/chem/_Air_Plasma_11s/chem.c
    - added the module CHEMMODEL_RODRIGUEZ2024
  * in model/chem/_Air_Plasma_11s/
    - added rodriguez2024.c
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - added a table for the rodriguez2024 model
    

2024 MAR 15a
  * in model/emfield/_Epotential*/emfield.c
    - added function find_DeltaVk_from_mu_thermal() and find_DeltaVk_thermal()
  * in model/fluid/_*_plasma/fluid_plasma.c
    - in find_Dstar(), commented out the subtraction of the charged species thermal diffusion to make