@@ -474,3 +474,15 @@
   year={1985},
   publisher={APS}
 }
+
+@article{aip:1986:itikawa,
+  title={Cross sections for collisions of electrons and photons with nitrogen molecules},
+  author={Itikawa, Yukikazu and Hayashi, M and Ichimura, A and Onda, K and Sakimoto, K and Takayanagi, K and Nakamura, M and Nishimura, H and Takayanagi, T},
+  journal={Journal of physical and chemical reference data},
+  volume={15},
+  number={3},
+  pages={985--1010},
+  year={1986},
+  publisher={American Institute of Physics for the National Institute of Standards and~…}
+}
+
