@@ -1291,6 +1291,30 @@ No. & Reaction\tnote{(b)} & Forward          & Backward    & $A$, $\textrm{cm}^3
                                           
 29 & $\rm e^{-} +N_2\rightarrow N + N + e^{-}$ &$T_{\rm e}$ & \multicolumn{3}{p{8cm}}{Rate given as spline-fit using cross-section data from Fig.~10 in Ref. \cite{pr:1985;:phelps}}  
                                                & \cite{pr:1985;:phelps} \\
+                                               
+   30  & $\rm e^- + N_2   \rightarrow N_2^+ + e^- + e^-$   &$T_{\rm e}$
+       &  \multicolumn{3}{p{8cm}}{Rate given as spline-fit using cross-section data from Fig. 9.4 in Ref. \cite{aip:1986:itikawa}}
+       & \cite{aip:1986:itikawa} \\
+       
+       
+       
+    31  & $\rm e^- + O_2   \rightarrow O_2^+ + e^- + e^-$  &$T_{\rm e}$
+       &  \multicolumn{3}{p{8cm}}{Rate given as spline-fit using cross-section data from Ref. \cite{pcpp:1992:morgan}}
+       & \cite{pcpp:1992:morgan} \\
+       
+    32  & $\rm e^- + NO  \rightarrow NO^+ + e^- + e^-$  &$T_{\rm e}$
+       &  \multicolumn{3}{p{8cm}}{Rate given as spline-fit using cross-section data from Ref. \cite{pcpp:1992:morgan}}
+       & \cite{pcpp:1992:morgan} \\
+       
+33 & $\rm N_2^{+}+e^- + e^-\rightarrow e^- + N_2 $ &$T_{\rm e}$ & $2.20 \cdot 10^{40} $ & $-4.50$ & $0.0$ 
+                                               &\cite{nasa:1973:dunn}\\
+       
+34 & $\rm O_2^{+}+e^- + e^-\rightarrow e^- + O_2 $ &$T_{\rm e}$ & $2.20 \cdot 10^{40} $ & $-4.50$ & $0.0$ 
+                                               &\cite{nasa:1973:dunn}\\
+                                               
+35 & $\rm NO^{+}+e^- + e^-\rightarrow e^- + NO $ &$T_{\rm e}$ & $2.20 \cdot 10^{40} $ & $-4.50$ & $0.0$ 
+                                               &\cite{nasa:1973:dunn}\\
+                                               
                                                                                                                            
 \bottomrule
 \end{tabular}
@@ -1365,6 +1389,26 @@ No. & Reaction\tnote{(b)} & Forward          & Backward    & $A$, $\textrm{cm}^3
     9.5662, 9.6421, 9.8483, 9.9808, 10.2742, 10.8312, 10.9937, 11.1449, 11.4428, 11.6894, 14.9141
  \end{minipage}  & \begin{minipage}[t]{0.3\textwidth}\raggedright\fontsize{7pt}{7pt}\selectfont 
   -45.6975, -41.8099, -35.8672, -33.6513, -30.3852, -26.0004, -24.6913, -23.4619, -21.1866, -19.8272, -13.9209
+\end{minipage}\\
+\midrule
+  \multirow{2}{*}{30} &  \multirow{2}{*}{ $\rm e^- + N_2 \rightleftarrows N_2^+ + e^- + e^-$   } & Forward &  \begin{minipage}[t]{0.3\textwidth}\raggedright\fontsize{7pt}{7pt}\selectfont  
+    9.8483, 9.9819, 10.2842, 10.4379, 10.7181, 11.0848, 11.1312, 11.1948, 11.4360, 11.5971, 14.9141
+ \end{minipage}  & \begin{minipage}[t]{0.3\textwidth}\raggedright\fontsize{7pt}{7pt}\selectfont 
+  -49.4041, -44.5753, -37.3445, -34.6995, -30.8554, -26.0214, -24.7535, -23.5733, -21.3724, -20.4532, -13.9209
+\end{minipage}\\
+\midrule
+  \multirow{2}{*}{30} &  \multirow{2}{*}{ $\rm e^- + O_2 \rightleftarrows O_2^+ + e^- + e^-$   } & Forward &  \begin{minipage}[t]{0.3\textwidth}\raggedright\fontsize{7pt}{7pt}\selectfont  
+       10.0203,   10.4221,   10.7349,   10.8887,   10.9093,   10.9259,   11.0566,   11.3986,   11.6522,   14.9141
+ \end{minipage}  & \begin{minipage}[t]{0.3\textwidth}\raggedright\fontsize{7pt}{7pt}\selectfont 
+    -52.3857,  -38.4423,  -31.5689,  -28.5071,  -27.6690,  -26.5035,  -23.7214,  -21.0586,  -19.8358,  -13.8155
+\end{minipage}\\
+\midrule
+  \multirow{2}{*}{30} &  \multirow{2}{*}{ $\rm e^- + NO \rightleftarrows NO^+ + e^- + e^-$   } & Forward &  \begin{minipage}[t]{0.3\textwidth}\raggedright\fontsize{7pt}{7pt}\selectfont  
+        9.5015,    9.7154,    9.9574,   10.1947,   10.3715,   10.5141,   10.5788,   10.7837,   11.2280,   11.6627,   12.1515,   13.9673
+
+ \end{minipage}  & \begin{minipage}[t]{0.3\textwidth}\raggedright\fontsize{7pt}{7pt}\selectfont 
+    -45.3314,  -38.8204,  -34.3367,  -31.3595,  -29.4711,  -27.4630,  -25.8461,  -23.1037,  -20.3218,  -18.7708,  -17.6469,  -15.9836
+
 \end{minipage}\\
 
     \bottomrule
